actualizando el código
agregando preferencias de css

--- a/Portfolio.html
+++ b/Portfolio.html
@@ -32,8 +32,8 @@
         <h1>DARWINS SUAREZ</h1>
         <h2>FULL STACK DEVELOPER</h2>
         <div class="social-media">
-        <a href="#">Linkedin</a>
-        <a href="#">GitHub</a>
+        <a href="https://www.linkedin.com/in/suarezdarwins/" target="_blank">Linkedin</a>
+        <a href="https://github.com/suarezdarwins" target="_blank">GitHub</a>
         </div>
     </header>
     <main class="container">
@@ -41,29 +41,33 @@
             <div class="card">
                 <div class="card-wrapper">
                     <h2>Receita Arepas</h2>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Architecto repudiandae accusamus dignissimos maxime repellendus expedita vel eaque. A ad, neque quasi deleniti molestiae ipsam reiciendis labore consequuntur soluta velit totam.</p>
+                    <p>Vem ver!</p>
                 </div>
             </div>
+            <div class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Architecto repudiandae accusamus dignissimos maxime repellendus expedita vel eaque. A ad, neque quasi deleniti molestiae ipsam reiciendis labore consequuntur soluta velit totam.</div>
         </div>
         <div class="card-container">
             <div class="card">
                 <div class="card-wrapper">
-                    <h2>Projeto 2</h2>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Architecto repudiandae accusamus dignissimos maxime repellendus expedita vel eaque. A ad, neque quasi deleniti molestiae ipsam reiciendis labore consequuntur soluta velit totam.</p>
+                    <h2>Receita Arepas</h2>
+                    <p>Vem ver!</p>
                 </div>
             </div>
+            <div class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Architecto repudiandae accusamus dignissimos maxime repellendus expedita vel eaque. A ad, neque quasi deleniti molestiae ipsam reiciendis labore consequuntur soluta velit totam.</div>
         </div>
         <div class="card-container">
             <div class="card">
                 <div class="card-wrapper">
-                    <h2>Projeto 3</h2>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Architecto repudiandae accusamus dignissimos maxime repellendus expedita vel eaque. A ad, neque quasi deleniti molestiae ipsam reiciendis labore consequuntur soluta velit totam.</p>
+                    <h2>Receita Arepas</h2>
+                    <p>Vem ver!</p>
                 </div>
             </div>
+            <div class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Architecto repudiandae accusamus dignissimos maxime repellendus expedita vel eaque. A ad, neque quasi deleniti molestiae ipsam reiciendis labore consequuntur soluta velit totam.</div>
+        </div>
         </div>
     </main>
     <footer class="footer">
-
+            Feito por SUAREZ DARWINS - 2023
     </footer>
     
   
