--- a/Portfolio.html
+++ b/Portfolio.html
@@ -18,7 +18,7 @@
                 <div class="trace"></div>
                 <div class="trace"></div>
               </label> 
-              <div class="menu"></div>
+              <div class="menu">
               <nav class="menu-itens">
                 <ul>
                     <li><a href="#">Home</a></li>
@@ -49,7 +49,7 @@
         <div class="card-container">
             <div class="card">
                 <div class="card-wrapper">
-                    <h2>Receita Arepas</h2>
+                    <h2>Projeto 1</h2>
                     <p>Vem ver!</p>
                 </div>
             </div>
@@ -58,7 +58,7 @@
         <div class="card-container">
             <div class="card">
                 <div class="card-wrapper">
-                    <h2>Receita Arepas</h2>
+                    <h2>Projeto 2</h2>
                     <p>Vem ver!</p>
                 </div>
             </div>
@@ -66,6 +66,7 @@
         </div>
         </div>
     </main>
+
     <footer class="footer">
             Feito por SUAREZ DARWINS - 2023
     </footer>
