--- a/Portfolio.html
+++ b/Portfolio.html
@@ -18,17 +18,18 @@
                 <div class="trace"></div>
                 <div class="trace"></div>
               </label> 
-              <div class="menu">
+              <div class="menu"></div>
               <nav class="menu-itens">
                 <ul>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">Sobre</a></li>
-                    <li><a href="#">Projetos</a></li>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Sobre</a></li>
+                <li><a href="#">Projetos</a></li>
                 </ul>
               </nav>
              </div>
             </div>
         </div>
+        
         <h1>DARWINS SUAREZ</h1>
         <h2>FULL STACK DEVELOPER</h2>
         <div class="social-media">
@@ -44,7 +45,8 @@
                     <p>Vem ver!</p>
                 </div>
             </div>
-            <div class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Architecto repudiandae accusamus dignissimos maxime repellendus expedita vel eaque. A ad, neque quasi deleniti molestiae ipsam reiciendis labore consequuntur soluta velit totam.</div>
+            <div class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Architecto repudiandae accusamus dignissimos maxime repellendus expedita vel eaque. A ad, neque quasi deleniti molestiae ipsam reiciendis labore consequuntur soluta velit totam.
+            </div>
         </div>
         <div class="card-container">
             <div class="card">
